<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/txvTituloEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/txtEditarEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txvIdDetalleEdicion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txtNumeroCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloEdicion" />

    <TextView
        android:id="@+id/txvCuentaEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtCuentaEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvIdDetalleEdicion" />

    <TextView
        android:id="@+id/txvNombreEdicion"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hintNombreAlta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCuentaEdit" />
    <TextView
        android:id="@+id/txvNombreStudentEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtCuentaEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvCuentaEdit" />

    <TextView
        android:id="@+id/txvGeneroEdicion"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txtGeneroDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombreEdicion" />

    <TextView
        android:id="@+id/txvGeneroEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txtCuentaEstudiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombreEdicion" />


    <TextView
        android:id="@+id/txvNivelAcademicoEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtTituloNivelAcademicoAlta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvGeneroEdit" />

    <RadioGroup
        android:id="@+id/rdgNivelAcademicoEdicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNivelAcademicoEdicion" >

        <RadioButton
            android:id="@+id/rdgSecundariaE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSecundaria" />

        <RadioButton
            android:id="@+id/rdgPrepaE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPrepa" />

        <RadioButton
            android:id="@+id/rdgUniversidadE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtUniversidad" />
    </RadioGroup>
    <TextView
        android:id="@+id/txvTituloEscuelaAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtEscuela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgNivelAcademicoEdicion" />
    <Spinner
        android:id="@+id/spnEscuelaProcedenciaEdicion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/escuelaProcedencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTituloEscuelaAlta" />

    <EditText
        android:id="@+id/edtTelefonoEdicion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hintTelefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnEscuelaProcedenciaEdicion" />

    <EditText
        android:id="@+id/edtCorreoEdicion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hintCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefonoEdicion" />

    <TextView
        android:id="@+id/edtNacimientoEdicion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:ems="10"
        android:hint="@string/hintNacimiento"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoEdicion" />


    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/btnEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCorreoEdicion" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>